[package]
name = "cocoa-purity"
version = "0.1.0"
edition = "2021"
authors = ["nerodono"]
license = "MIT"
repository = "https://github.com/nerodono/cocoa-purity"

[features]
default = ["map_enum"]
map_enum = []

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
